changements pour le rattrapage

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
   <div class="main-nav">
     <nav class="container">
       <div class="logo-container">
@@ -30,97 +31,103 @@
       </div>
     </nav>
   </div>
-  <header id="top">
-    <div class="headerContain">
+  <header>
+    <div id="go-top" class="headerContain">
       <h1>
-        Trouvez <strong class="strong colorOrange">votre futur appareil photo </strong><br> + <strong class="strong colorOrange">ses accesoires</strong></h1>
+        Trouvez <strong class="strong colorOrange">votre futur appareil photo </strong><br> + <strong class="strong colorOrange">ses accessoires</strong></h1>
       <p><img src="images/img_header.png" alt=""></p>
       <p><a id="ctaHeader" href="#">Explorer les appareils</a></p>
     </div>
   </header>
   <div class="resumeWebSite">
-    <p>Chez <strong class="strong colorOrange">MyCameraPro</strong> achetez tous ce d’on vous avez besoin, pour faire <span class="colorOrange">des photos de qualité professionel.</span> <br>Achetez les <span class="colorOrange">accessoires
-        professionels</span> parfait avec votre appareil photo.</p>
+    <h2>Chez <strong class="strong colorOrange">MyCameraPro</strong> achetez tout ce dont vous avez besoin, pour faire <span class="colorOrange">des photos de qualité professionelle.</span> <br>Complétez votre collection avec nos <span
+        class="colorOrange">accessoires professionels</span>.</h2>
   </div>
   <section class="product-row">
-    <div class="product">
-      <div class="favoriteMacaron">
-        <span><i class="far fa-heart"></i>
-        </span>
+    <article class="product">
+      <div class="product-img">
+        <img src="images/product1.png" alt="">
+        <div class="favoriteMacaron">
+          <i class="far fa-heart"></i>
+        </div>
       </div>
-      <img src="images/product1.png" alt="">
-      <p class="textProduct">appareil photo reflex Canon EOS 1000D <strong class="strong">549,99€
-        </strong> </p>
-      <p><a class="ctaProduct" href="#">Ajouter au panier</a></p>
-    </div>
-    <div class="product">
-      <div class="favoriteMacaron">
-        <span><i class="far fa-heart"></i>
-        </span>
+      <div class="textProduct">
+        <h3 class="">Appareil photo reflex Canon EOS 1000D</h3>
+        <h4 class="price">549,99€</h4>
+        <button type="button" name="button" class="ctaProduct">Ajouter au panier</button>
       </div>
-      <img src="images/produit2.png" alt="">
-      <p class="textProduct">Objectif 42-105mm AF et MF <br> <strong class="strong">169,99€
-        </strong> </p>
-      <p><a class="ctaProduct" href="#">Ajouter au panier</a></p>
-    </div>
-    <div class="product">
-      <div class="favoriteMacaron">
-        <span><i class="far fa-heart"></i>
-        </span>
+
+    </article>
+    <article class="product">
+      <div class="product-img">
+        <img src="images/produit2.png" alt="">
+        <div class="favoriteMacaron">
+          <i class="far fa-heart"></i>
+        </div>
       </div>
-      <img src="images/produit3.png" alt="">
-      <p class="textProduct">Lot de 3 objectifs
-        de 42mm à 205mm <br>
-        <strong class="strong">329,99€
-        </strong> </p>
-      <p><a class="ctaProduct" href="#">Ajouter au panier</a></p>
-    </div>
+      <div class="textProduct">
+        <h3 class="">Objectif 42-105mm AF et MF</h3>
+        <h4 class="price">169,99€
+        </h4>
+        <button type="button" name="button" class="ctaProduct">Ajouter au panier</button>
+      </div>
+    </article>
+    <article class="product">
+      <div class="product-img">
+        <img src="images/produit3.png" alt="">
+        <div class="favoriteMacaron">
+          <i class="far fa-heart"></i>
+        </div>
+      </div>
+      <div class="textProduct">
+        <h3 class="">Lot de 3 objectifs de 42mm-205mm</h3>
+        <h4 class="price">329,99€
+        </h4>
+        <button type="button" name="button" class="ctaProduct">Ajouter au panier</button>
+      </div>
+    </article>
   </section>
-  <div class="add">
-    <p class="addStrong">-15% sur votre commande <br><span class="cw addStrong">boîtier + objectif </span> <br><span class="addSpan">Seulement<strong> jusqu’à demain !</strong> </span> </p>
-    <p id="ctaADD"> <a href="#">DÉCOUVRIR</a> </p>
-  </div>
+  <article class="add">
+    <h2 class="addStrong">-15% sur votre commande <br><span class="cw">boîtier + objectif </span> <br><span class="addSpan">Seulement<strong> jusqu’à demain !</strong> </span> </h2>
+    <a id="ctaADD" href="#">DÉCOUVRIR</a>
+  </article>
   <section class="icons-row">
     <div class="icon">
       <img src="images/delivey.svg" alt="">
-      <p class="strong">Livraison en 24h en France</p>
+      <h4 class="strong">Livraison en 24h en France</h4>
     </div>
     <div class="icon">
       <img src="images/quality.svg" alt="">
-      <p class="strong">Satisfait ou remboursé</p>
+      <h4 class="strong">Satisfait ou remboursé</h4>
     </div>
     <div class="icon">
       <img src="images/chat.svg" alt="">
-      <p class="strong">Conseils de nos experts 7/7j </p>
+      <h4 class="strong">Conseils de nos experts 7/7j </h4>
     </div>
   </section>
-  <footer>
-    <div class="footer-container">
-      <div class="form">
-        <p class="title-footer">Contact</p>
-        <form class="" action="" method="post">
-          <label for="Nom">Nom</label>
-          <input id="Nom" type="text" name="Nom" value="" placeholder="Nom">
-          <label for="email">Email</label>
-          <input id="email" type="email" name="email" value="" placeholder="email">
-          <label for="Message">Message</label>
-          <textarea id="Message" name="Message" rows="4" cols="" placeholder="Votre message"></textarea>
-          <input type="submit" name="submit" value="Envoyer">
-        </form>
-      </div>
-      <div class="about">
-        <p class="title-footer">À PROPOS</p>
-        <p> <a class="text-footer" href="#">Conditions générales de la Marketplace</a></p>
-        <p> <a class="text-footer" href="#">Conditions générales de ventes</a></p>
-        <p> <a class="text-footer" href="#">Données personnelles</a></p>
-        <p> <a class="text-footer" href="#">Mentions légales CGU/CGV</a></p>
-      </div>
-      <div>
-        <p class="text-footer">Apareil photo avec objectifs.</p>
-        <p class="text-footer">Matériel profesionel.</p>
-        <p class="text-footer">Les meillieur marque du marché.</p>
-        <p class="text-footer">Livraison en France</p>
-      </div>
+  <footer class="footer-container">
+    <div class="about">
+      <h3 class="title-footer">Liens Utiles</h3>
+      <h4> <a class="text-footer" href="#">Conditions générales de la Marketplace</a></h4>
+      <h4> <a class="text-footer" href="#">Conditions générales de ventes</a></h4>
+      <h4> <a class="text-footer" href="#">Données personnelles</a></h4>
+      <h4> <a class="text-footer" href="#">Mentions légales CGU/CGV</a></h4>
+    </div>
+    <div class="referencing">
+      <h3 class="title-footer">À Propos</h3>
+      <h4 class="text-footer">Appareils photo avec objectifs.Matériel profesionel.Les meillieur marque du marché.Livraison en France.Canon,Fuji. Offres promotionelles. Appareils photos. Objectifs.Produits Profesionnels </h4>
+    </div>
+    <div class="form">
+      <h3 class="title-footer">Contact</h3>
+      <form class="" method="post">
+        <label for="Nom">Nom</label>
+        <input id="Nom" type="text" name="Nom" value="" placeholder="Nom">
+        <label for="email">Email</label>
+        <input id="email" type="email" name="email" value="" placeholder="email">
+        <label for="Message">Message</label>
+        <textarea id="Message" name="Message" rows="4" placeholder="Votre message"></textarea>
+        <input type="submit" name="submit" value="Envoyer">
+      </form>
     </div>
   </footer>
   <div class="go-top">
